Fix font size for data dialog file name input.  Make data dialog wider.  Align top buttons.

--- a/assets/css/sass/_datasource.sass
+++ b/assets/css/sass/_datasource.sass
@@ -77,6 +77,7 @@
   background: white
 
 #data-card
+  width: 700px
   .form-group.form-group-sm 
     margin-top: 0px
     padding-bottom: 0px
